--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /FiguraHerencia/target/
+/Administracion/target/
+/Reto3/target/
+/TallerHerencia/target/
+/TellerClaseAbstractaEInterfaces/target/
+/EjercicioPracticoClAbsInterfaces/target/
+/NetLogostik/target/
