Formularios y bases de datos CRUD

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /TellerClaseAbstractaEInterfaces/target/
 /EjercicioPracticoClAbsInterfaces/target/
 /NetLogostik/target/
+/interfaces y bases de datos/FirstaGUI/target/
+/interfaces y bases de datos/interfazSuma/target/
+/interfaces y bases de datos/GUIeJERCICIO/target/
+/interfaces y bases de datos/pruebaBaseDatos/target/
+/interfaces y bases de datos/coleresData/target/
+/interfaces y bases de datos/GUIFormBaseDatos/target/
